style.css
/* ... */
@media (max-width:660px) { 
    .carousel-caption        {bottom: 30px;max-width: 280px;} 
    .carousel-caption.d-md-block p {font-size: 0.5rem!important; width: 100%;display: none;}
    .carousel-caption.d-md-block h5 {font-size: 1.2rem!important;}
    .carousel-caption.d-md-block h3 {font-size: 1.2rem!important;}
    .carousel-inner :nth-child(3) .carousel-caption h3 {width:120px !important;}
    .carousel-inner :nth-child(3) .carousel-caption h5 {width:250px!important}
    .carousel-caption.d-md-block ul {display: none;}
    .carousel-inner :nth-child(2) .carousel-caption { bottom: 2rem !important; }
    .carousel-flexbox {padding-left: 1.5rem!important;}
    .card-img-top {height: 150px;}
    .rolloveryellow .line-container {padding: 0!important;}
}


@media (max-width:900px) { 
    #carousel3AATdesk {display: none;}
    #carousel3AATmob {display: block;margin-bottom: 30px;}
    #carousel3AATmob .carousel-indicators { top: 430px; }
}

@media only screen and (min-width: 768px) and (max-width:1025px) {
.sticky-box-container {top: 107%;}
.col-md-1 {width: 100%;}
.peachbg {background-color: #FEF9EC; padding: 55px 0;}
.card-body.tall {min-height: 470px;display: flex;flex-direction: column;align-items: flex-start;align-content: flex-start;flex-wrap: nowrap;justify-content: space-between;padding-top: 40px;}
}

